[metadata]
name = micromelon
version = 1.1.0
author = Micromelon Robotics
author_email = contact@micromelon.com.au
description = A Python module to control Micromelon Robots over BLE, TCP, or Serial with a Raspberry Pi connected to the rover
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Micromelon-Robotics/mm-pymodule
project_urls =
    Bug Tracker = https://github.com/Micromelon-Robotics/mm-pymodule/issues
classifiers =
    Development Status :: 4 - Beta
    Framework :: AsyncIO
    Intended Audience :: Education
    Intended Audience :: Developers
    Topic :: Education
    Topic :: Communications
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
install_requires =
    bleak >= 0.11.0
    pyserial
    numpy

[options.packages.find]
where = .
exclude =
    tests
    examples
    docs
